--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@uiw/react-json-view": "^2.0.0-alpha.34",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "project": "^0.1.6",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
