--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-router": "^7.7.1",
+    "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
